32.10.1 (24-02-2022)
-Improvement: Added dates to DegreeOfficialPublication

32.10.0 (16-02-2022)
- Bug fix: Get curricular rules from curriculum module shouldn't reuse group rules result
- Improvement: Add taught languages field to competence course information 

32.9.10 (04-02-2022)
- Bug fix: Add missing AcademicPeriod.OTHER label
- Bug fix: Remove argument to check enrolments in active students group 

32.9.9 (07-12-2021)
- Improvement: Add types "EU_PERMANENT_RESIDENCE_CARD" and "EU_REGISTRATION_CERTIFICATE" to IDDocumentType

32.9.8 (19-11-2021)
- Refactor: Predicates in TreasuryEvent to check if it is related with tuition debts, and if the event discount on tuition total amount

32.9.7 (19-10-2021)
- Refactor: Add findByCode to DegreeType
- Refactor: Statute Type API cleanup
- Refactor: Ensure Statute Type code is required
- Refactor: Add creator method for Statute Type

32.9.6 (06-10-2021)
- Bug fix: Changed degree designation (SchoolLevelType.DOCTORATE_DEGREE SchoolLevelType.MASTER_DEGREE)

32.9.5 (06-10-2021)
- Improvement: Student group with argument to check enrolments

32.9.4 (30-09-2021)
- Improvement: Add presentation name to AcademicPeriod
- Refactor: Add RegistrationProtocol creator method
- Refactor: Add ProgramConclusion finder method

32.9.3 (20-09-2021)
- Improvement: Active students group with argument to check enrolments
- Refactor: Add IdDocumentTypeObject creator and finder methods

32.9.2 (16-09-2021)
- Refactor: Add method to update execution course name

32.9.1 (15-09-2021)
- Refactor: Rename slot to mark available school classes for enrolment

32.9.0 (13-09-2021)
- Improvement: Mark available school classes for automatic enrolment

32.8.13 (06-09-2021)
- Bug fix: OrRule should evaluate to true on prefilter level

32.8.12 (26-08-2021)
- Bug fix: Changed degree designation (SchoolLevelType.DEGREE)

32.8.11 (23-08-2021)
- Improvement: Only attempt shift enrolment in the first suitable capacity for provided registration
